--- a/assets_src/ui/in_game_menu.yaml
+++ b/assets_src/ui/in_game_menu.yaml
@@ -39,15 +39,17 @@ children:
             fill: [left, centreVertical]
       - uuid: 98732ed1-2122-467e-a12a-83bc79fa23fd
         proportion: 1
-        border: [50, 0, 50, 50]
+        border: [0, 0, 0, 50]
         sizer:
           columnProportions: []
           gap: 50
         children:
           - uuid: a09333b3-7428-4b95-9ba2-0e82beb84a04
+            border: [50, 0, 50, 0]
             sizer:
               columnProportions: []
             widget:
+              active: true
               class: widget
               id: optionsPane
             children:
@@ -82,12 +84,13 @@ children:
               id: savestatePane
             children:
               - uuid: ba8e3d1e-c4be-40e3-8ed6-6cce519c8077
-                border: [50, 0, 0, 0]
+                border: [100, 0, 0, 0]
                 widget:
                   class: label
                   style: labelHeader
                   text: Savestates
               - uuid: 1124af72-6779-40a8-a4ba-80b03d5e6647
+                border: [50, 0, 0, 0]
                 sizer:
                   columnProportions: []
                 widget:
@@ -95,17 +98,19 @@ children:
                   style: horizontalDiv
               - uuid: bb9e99c1-67d2-4cb4-9974-a3b28da46ec3
                 proportion: 1
-                border: [50, 0, 50, 0]
+                border: [0, 0, 0, 0]
                 sizer:
                   columnProportions: []
                 widget:
+                  active: true
                   class: scrollBarPane
                   scrollHorizontal: true
                   scrollVertical: false
-                  style: rgScrollbar
+                  style: rgScrollbarSaveState
                 children:
                   - uuid: b1cc98cb-ea92-4aa5-98a3-8f5cf8a1ae3a
                     proportion: 0
+                    border: [200, 0, 200, 0]
                     sizer:
                       columnProportions: []
                     widget:
