--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,11 @@ linux_bin/
 res/*.aps
 .vs/
 src/build_version.h
-halley_deps
-cores
-roms
-save
-system
-lib
-tmp
-images
-retrograde
+/cores
+/roms
+/system
+/lib
+/tmp
+/images
+/retrograde
+/profiles
