--- a/halley_project/asset_manifest.yaml
+++ b/halley_project/asset_manifest.yaml
@@ -23,6 +23,7 @@ packs:
       - ~:gameProperties
       - ~:prefab
       - ~:scene
+      - ~:binaryFile:binary/sdl
 
   - name: images
     matches:
